--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,10 @@ a {
     color: white;
     background: #7A284E;
     font-size: 26px;
-    padding: 24px 12px 24px 12px;
+    padding: 24px 12px;
     border-radius: 12px;
     margin-bottom: 36px;
+    text-align: center;
 }
 
 ::placeholder {
@@ -26,9 +27,9 @@ input {
     background: #FFF7FB;
     border: 0px solid;
     font-size: 26px;
-    padding: 24px 12px 24px 12px;
+    padding: 24px 12px;
     border-radius: 12px;
-    margin-bottom: 24px;
+    margin-bottom: 12px;
 }
 
 .search {
